# Sleek-Manual-Maker

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  JSONL_USAGE.md  PERFORMANCE.md  README.md  build.bat  create_debug_package.bat  create_release_package.bat  err.txt  err2.txt  err3.txt  err4.txt  err5.txt  err6.txt  err7.txt  err8.txt  error.txt  error_log.txt  error_log_2.txt  manual.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: FEATURES.md  JSONL_USAGE.md  README.md  RELEASE.md  STATE_MACHINE.md
docs/site/: 404.html  index.html  privacy.html  styles.css  terms.html
docs/video/: promo-narration.txt  promo-subtitles.ass
scripts/: build_debug_package.ps1  build_promo_video.ps1  build_release_zip.ps1
src/: app.rs  generator.rs  main.rs  paths.rs  recorder.rs  types.rs
