[package]
name = "SleekManualMaker"
version = "2.0.0"
edition = "2021"

[dependencies]
rdev = "0.5.2"
screenshots = "0.8"
chrono = "0.4"
anyhow = "1.0"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.29", features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
base64 = "0.21"
open = "5.0"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

# --- Debug Build Optimization ---
# 自分のコードはデバッグしやすくするため最適化しない (デフォルト)
[profile.dev]
opt-level = 0

# 依存クレート（image処理など）は最高速度で最適化する
[profile.dev.package."*"]
opt-level = 3
